k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.steffbeckers.localhost
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: steffbeckers-grafana
                port:
                  number: 3000
